variables.Variables.scala.code
var bite :Int = 42
lire(bite);